# wgpu_compute_test

./: .gitignore  Cargo.toml
src/: compute.rs  fragment.wgsl  main.rs  primitive.rs  program.rs  renderer.rs  shader.wgsl  test_shader.rs  ui.rs  uniforms.rs  util.rs
src/compute/: demosaic.rs  downsample.rs  fragment.rs  mod.rs  processing.rs
src/shader/: demosaic.wgsl  downsample.wgsl  fragment.wgsl  processing.wgsl  uniforms.wgsl
