[package]
name = "wgpu_compute_test"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
env_logger = "0.11.8"
flume = "0.11.1"
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = [
    "image",
    "wgpu",
] }
image = "0.25.8"
pollster = "0.4.0"
wgpu = "27.0"
